# pythoncppinterfacing

./: CMakeLists.txt  cffi_utils.py  cpp_lib.cpp  cpp_lib.h  cpp_lib.py  main.cpp  minimal_example.py  python_function.py
